@@ -56,6 +56,9 @@ Trunk (not yet released)
     AVRO-1334. Java: Upgrade snappy-java dependency to 1.0.5
     (scottcarey)
 
+    AVRO-1238. C: EOF detection in avro_file_reader_read_value.
+    (Michael Cooper via dcreager)
+
   BUG FIXES
 
     AVRO-1296. Python: Fix schemas retrieved from protocol types
